adding Fortify changes