@@ -108,6 +108,7 @@ subprojects {
     dependencies {
         compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
         testCompile 'io.github.openfeign:feign-jackson:9.7.0'
+        testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
@@ -208,6 +209,12 @@ task smoke(type: GradleBuild, description: 'Runs smoke tests', group: 'Verificat
 task functional(type: GradleBuild, description: 'Runs Functional tests', group: 'Verification') {
     buildFile = './api/build.gradle'
     tasks = ['functionalTest']
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task migratePostgresDatabase(type: GradleBuild, description: 'Migrates Postgres Database', group: 'liquibase') {
